@@ -1,3 +1,10 @@
+Fri Aug 01 19:09:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimTabBar.cpp:
+	  - The protocol icon for the account on each conversation is
+	    now displayed on the tab.
+
 Fri Aug 01 18:19:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* mkipk.sh:
